add my note on MARTES

--- a/20180618.adoc
+++ b/20180618.adoc
@@ -6,7 +6,7 @@
 
 https://medium.com/techtive/does-your-team-write-good-code-8b1dcec6404d[Does your team write good code?]
 
-== Technique
+== Tip
 
 == Share
 
