--- a/20180702.adoc
+++ b/20180702.adoc
@@ -1,8 +1,185 @@
 = 20180702 MARTES
+:stem: latexmath
 
 == Mathematics
+
+latexmath:[R_{srm}(f)=\frac{1}{N}\sum_{i=1}^{N}L(y_{i},f(x_{i}))+\lambda J(f)]
+
+[stem]
+++++
+R_{srm}(f)=\frac{1}{N}\sum_{i=1}^{N}L(y_{i},f(x_{i}))+\lambda J(f)
+++++
+
+[stem]
+++++
+R_{emp}(\widehat{f}) = \frac{1}{N}\sum_{i=1}^{N}L(y_{i},\widehat{f}(x_{i}))
+++++
+
+[stem]
+++++
+e_{test} = \frac{1}{N^{'}}\sum_{i=1}^{N^{'}}L(y_{i},\widehat{f}(x_{i}))
+++++
+
+
 == Algorithm
+
+https://leetcode.com/problems/median-of-two-sorted-arrays/description/[Median of Two Sorted Arrays - LeetCode]
+
+There are two sorted arrays nums1 and nums2 of size m and n respectively.
+
+Find the median of the two sorted arrays. The overall run time complexity should be O(log (m+n)).
+
+[source,java]
+----
+package com.diguage.algorithm.leetcode;
+
+/**
+ * = 4. Median of Two Sorted Arrays
+ *
+ * https://leetcode.com/problems/median-of-two-sorted-arrays/description/[Median of Two Sorted Arrays - LeetCode]
+ *
+ * There are two sorted arrays nums1 and nums2 of size m and n respectively.
+ *
+ * Find the median of the two sorted arrays. The overall run time complexity should be O(log (m+n)).
+ *
+ * .Example 1:
+ * [source]
+ * ----
+ * nums1 = [1, 3]
+ * nums2 = [2]
+ *
+ * The median is 2.0
+ * ----
+ *
+ * .Example 2:
+ * [source]
+ * ----
+ * nums1 = [1, 2]
+ * nums2 = [3, 4]
+ *
+ * The median is (2 + 3)/2 = 2.5
+ * ----
+ *
+ * @author D瓜哥, https://www.diguage.com/
+ * @since 2018-07-01
+ */
+public class MedianOfTwoSortedArrays {
+    public static double findMedianSortedArrays(int[] nums1, int[] nums2) {
+        if ((nums1 == null || nums1.length == 0)
+                && (nums2 == null || nums2.length == 0)) {
+            return 0;
+        }
+        if (nums1 == null || nums1.length == 0) {
+            return singleArray(nums2);
+        }
+        if (nums2 == null || nums2.length == 0) {
+            return singleArray(nums1);
+        }
+
+        int length = nums1.length + nums2.length;
+        boolean isOdd = (length & 1) == 1;
+        int i1 = 0;
+        int i2 = 0;
+        int min = nums1[0] < nums2[0] ? nums1[0] : nums2[0];
+        int temp = min;
+        int last = min;
+        int now = min;
+        for (int i = 0; i < length; i++) {
+            if (i1 < nums1.length && i2 < nums2.length) {
+                if (nums1[i1] <= nums2[i2]) {
+                    temp = nums1[i1];
+                    i1++;
+                } else {
+                    temp = nums2[i2];
+                    i2++;
+                }
+            } else if (i1 < nums1.length) {
+                temp = nums1[i1];
+                i1++;
+            } else {
+                temp = nums2[i2];
+                i2++;
+            }
+
+            if (i > 0) {
+                last = now;
+                now = temp;
+            }
+
+            if (length / 2 == i) {
+                if (isOdd) {
+                    return now;
+                } else {
+                    return ((double) (last + now)) / 2.0;
+                }
+            }
+        }
+        return 0;
+    }
+
+    private static double singleArray(int[] nums2) {
+        boolean isOdd = (nums2.length & 1) == 1;
+        if (isOdd) {
+            return nums2[nums2.length / 2];
+        } else {
+            return (nums2[nums2.length / 2 - 1] + nums2[nums2.length / 2]) / 2.0;
+        }
+    }
+
+    public static void main(String[] args) {
+        int[] nums1 = new int[]{100001};
+        int[] nums2 = new int[]{100000};
+
+        System.out.println(findMedianSortedArrays(nums1, nums2));
+    }
+}
+----
+
 == Review
-== Technique
+
+I read the Raft paper this week.
+
+. https://raft.github.io/[Raft Consensus Algorithm]
+. http://thesecretlivesofdata.com/raft/[Raft]
+
+== Tip
+
+I share the tip: I want to write JavaDoc in AsciiDoctor. 
+
+If you use Maven, it is easy to generate JavaDoc. You can write JavaDoc in AsciiDoctor, then use the plugin to generate JavaDoc.
+
+I show the configuaration as follows:
+
+[source,xml]
+----
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-javadoc-plugin</artifactId>
+    <version>3.0.1</version>
+    <configuration>
+        <source>1.8</source>
+        <doclet>org.asciidoctor.Asciidoclet</doclet>
+        <docletArtifact>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoclet</artifactId>
+            <version>1.5.4</version>
+        </docletArtifact>
+        <!--<overview>src/main/java/overview.adoc</overview>-->
+        <additionalparam>
+            --base-dir ${project.basedir}
+            --attribute "name=${project.name}"
+            --attribute "version=${project.version}"
+            --attribute "title-link=http://example.com[${project.name} ${project.version}]"
+        </additionalparam>
+    </configuration>
+</plugin>
+----
+
+If you use IntelliJ IDEA, it will generate "<p>" on JavaDoc empty lines. You should close the feature. Let me show how to close the feature:
+
+`Preferences > Editor > Code Style > Java > JavaDoc > 'Generate "<p>" on empty lines'`
+
+You do not check the options, it is OK.
+
 == English
 == Share
