--- a/20180625.adoc
+++ b/20180625.adoc
@@ -1,4 +1,6 @@
 = 20180625 周 ARTS
+D瓜哥 <https://www.diguage.com/>
+{docdate}
 :source-highlighter: coderay
 :allow-uri-read:
 :github_raw_base_path: https://raw.githubusercontent.com/diguage
