--- a/README.adoc
+++ b/README.adoc
@@ -21,4 +21,4 @@
 
 == Source
 
-https://github.com/diguage/algorithm-books[diguage/algorithm-books: 刷刷算法题]
+https://github.com/diguage/leetcode[diguage/leetcode: LeetCode]
