--- a/modules/ROOT/pages/20180702.adoc
+++ b/modules/ROOT/pages/20180702.adoc
@@ -1,4 +1,5 @@
 = 20180702 MARTES
+include::_attributes.adoc[]
 
 == Mathematics
 
@@ -76,7 +77,7 @@ Consensus algorithms typically arise in the context of __replicated state machin
 
 Replicated state machines are typically implemented using a replicated log.
 
-Keeping the replicated log consistent is the job of the consensus algorithm. 
+Keeping the replicated log consistent is the job of the consensus algorithm.
 
 Consensus algorithms for practical systems typically have the following properties:
 
@@ -91,7 +92,7 @@ Paxos has two significant drawbacks:
 
 . The first drawback is that Paxos is exceptionally difficult to understand.
 . The second problem with Paxos is that it does not provide a good foundation for building practical implementations.
-.. One reason is that there is no widely agreed-upon algorithm for multi-Paxos. 
+.. One reason is that there is no widely agreed-upon algorithm for multi-Paxos.
 .. Furthermore, the Paxos architecture is a poor one for building practical systems; this is another consequence of the single-decree decomposition.
 .. Another problem is that Paxos uses a symmetric peer-to-peer approach at its core (though it eventually suggests a weak form of leadership as a performance optimization).
 
@@ -135,7 +136,7 @@ If one server’s current term is smaller than the other’s, then it updates it
 
  How to update?
 
-Raft servers communicate using remote procedure calls (RPCs), and the basic consensus algorithm requires only two types of RPCs. 
+Raft servers communicate using remote procedure calls (RPCs), and the basic consensus algorithm requires only two types of RPCs.
 
 . *RequestVote RPCs* are initiated by candidates during elections.
 . *AppendEntries RPCs* are initiated by leaders to replicate log entries and to provide a form of heartbeat.
@@ -146,7 +147,7 @@ Raft servers communicate using remote procedure calls (RPCs), and the basic cons
 Two type timeout:
 
 . election timeout
-. 
+.
 
 A candidate wins an election if it receives votes from a majority of the servers in the full cluster for the same term. *Each server will vote for at most one candidate in a given term*, on a first-come-first-served basis.
 
@@ -154,7 +155,7 @@ If the leader’s term (included in its RPC) is at least as large as the candida
 
 Rejects the RPCs that the term in is smaller than the current term.
 
-Raft uses randomized election timeouts to ensure that split votes are rare and that they are resolved quickly. 
+Raft uses randomized election timeouts to ensure that split votes are rare and that they are resolved quickly.
 
 ==== Log replication
 
@@ -175,7 +176,7 @@ The first property follows from the fact that a leader creates at most one entry
 
 The second property is guaranteed by a simple consistency check performed by AppendEntries.
 
-In Raft, the leader handles inconsistencies by forcing the followers’ logs to duplicate its own. 
+In Raft, the leader handles inconsistencies by forcing the followers’ logs to duplicate its own.
 
 Find the latest log entry where the two logs agree, delete any entries in the follower’s log after that point, and send the follower all of the leader’s entries after that point.
 
